test/parsing/fail/parsing_error_string_eq_string.j
class A {
  Void main() { return "a" == "b"; }
}
